# marketing-ai-agent

./: CLAUDE.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  deps.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  chat.py  conversations.py  properties.py
backend/app/services/: agent_service.py  ask_user_store.py  compact_mcp.py  credentials_manager.py  mcp_manager.py  prefixed_mcp.py  supabase_service.py
backend/scripts/: ga4_extended_server.py  gsc_server.py
docs/design/: thinking-indicator-spec.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/[[...slug]]/: page.tsx
frontend/app/dashboard/components/: AppSidebar.tsx  AskUserPrompt.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  GoogleConnectButton.tsx  HistoryPanel.tsx  PropertySelector.tsx  SettingsView.tsx  Sidebar.tsx
frontend/app/dashboard/components/charts/: AreaChartView.tsx  BarChartView.tsx  ChartRenderer.tsx  FunnelChartView.tsx  (+6 more)
frontend/app/privacy-policy/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: public-page-layout.tsx
frontend/lib/: api.ts  types.ts
frontend/lib/hooks/: useChat.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260131000000_initial.sql  20260202000000_add_context_items.sql  20260202100000_add_activity_items.sql
